@@ -109,7 +109,7 @@ AC_ARG_WITH(gnome-print,
 
 if test "x$with_gp" != "xno"; then
 	dnl Have to test gnome-print presence
-	PKG_CHECK_MODULES(GNOME_PRINT, libgnomeprint-2.0 >= 1.116.1  libgnomeprintui-2.0 >= 1.116.0  libgnome-2.0 >= 2.0.4, gp=yes, gp=no)
+	PKG_CHECK_MODULES(GNOME_PRINT, libgnomeprint-2.0 >= 1.116.0  libgnomeprintui-2.0 >= 1.116.0, gp=yes, gp=no)
 	if test "x$gp" != "xyes"; then
 		dnl No gnome-print found
 		if test "x$with_gp" == "xyes"; then
@@ -124,9 +124,6 @@ fi
 
 AC_SUBST(GNOME_PRINT_CFLAGS)
 AC_SUBST(GNOME_PRINT_LIBS)
-
-dnl fixme:
-gp=no
 
 AM_CONDITIONAL(USE_GNOME_PRINT, test "x$gp" == "xyes")
 if test "x$gp" == "xyes"; then
